hphp/hack/test/typecheck/fc_enum_17.php.exp
File "fc_enum_17.php", line 9, characters 7-15:
Was expecting a class (Typing[4026])
